<resources>
    <string name="app_name">ConnectU</string>
    <string name="app_version">2.3.5</string>
    <string name="app_name_error">ConnectU Error</string>
    <string name="error_unexpected">Unexpected error</string>
    <string name="error_unexpected_long">Please restart the app</string>
    <string name="error_no_internet">Error, couldn\'t connect with UACloud.</string>
    <string name="error_no_logged">Error, UACloud server closed session. Relaunch the app</string>
    <string name="error_login_failed">Error, invalid app login. Please try again later or contact a developer</string>
    <string name="error_download_cancel">Action cancelled, local storage permissions needed!</string>
    <string name="error_notificatin_null_title">Notification error</string>
    <string name="error_notificatin_null">We may not be able to display this notification at this moment</string>
    <string name="error_casting_action">Unable to cast this action</string>
    <string name="error_unable_display">We may not be able to display this content right now. Please try later.</string>
    <string name="error_problem_service">Error, We were not able to fetch information from a service. Please try again later and if this problem percist contact us at dgrripoll@gmail.com with the code:</string>
    <string name="error_no_maps">Error, You don\'t have any maps app installed.</string>
    <string name="error_external_app">Error calling external app.</string>
    <string name="error_find_show">We did not find anything to show</string>
    <string name="error_find_open">Couldn\'t find any app to open this file!</string>
    <string name="error_web_older">Older android versions don\'t allow autologin, please login manually</string>
    <string name="error_year_loading">Already switching year!</string>
    <string name="error_materiales_session_ended">Session timeout, please return to main and come back again!</string>
    <string name="error_file_not_downloaded">Error, not able to download that file</string>
    <string name="error_unkown_response_format">Error, we were not able to perform this action. Please try again!</string>
    <string name="error_bad_response">Error, UACloud did not respond properly. Please try again later!</string>
    <string name="error_empty_response">Error, UACloud returned an empty response</string>
    <string name="error_unable_show">No able to show</string>
    <string name="notifi_more_title_have">You have</string>
    <string name="notifi_more_title_more">new unseen notifications</string>
    <string name="notifi_more_title_more_files">pending files</string>
    <string name="notifi_more_title_more_notifications">pending notifications</string>
    <string name="notifi_more_text">You have received more than one notification since your last visit</string>
    <string name="alert_logout">Do you really want to sing out?</string>
    <string name="alert_loading">Loading, please wait…</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="loading">Bathing the fishes</string>
    <string name="loading1">Breaking the walls</string>
    <string name="loading2">Taking the breakfast</string>
    <string name="loading3">Making the moonwalk</string>
    <string name="loading4">Just doing nothing</string>
    <string name="loading5">We are nearly finished</string>
    <string name="completed">Completed</string>
    <string name="password">Password</string>
    <string name="login" translatable="false">Login</string>
    <string name="ua_email" translatable="false">\@alu.ua.es</string>
    <string name="email" translatable="false">Email</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="university">University of Alicante</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_apps" translatable="false">Apps</string>
    <string name="title_favs">Calendar</string>
    <string name="title_settings">Settings</string>
    <string name="home_blank_mini_notifications">No new notifications</string>
    <string name="home_blank_notifications">You have no pending notifications</string>
    <string name="home_title_reminder">Important reminder</string>
    <string name="home_title_schedule">Today Schedule</string>
    <string name="blank_schelude_home">No schedule programmed for today</string>
    <string name="home_title_notifications">Pending notifications</string>
    <string name="home_schedule">Schedule</string>
    <string name="home_end">You have reached the end of the page!</string>
    <string name="back_to_exit">Press back again to exit the app</string>
    <string name="title_activity_anuncios" translatable="false">Anuncios</string>
    <string name="date_time_prev">about</string>
    <string name="date_time_moment">a moment ago</string>
    <string name="date_time_hours">hours ago</string>
    <string name="date_time_days">days ago</string>
    <string name="date_time_months">months ago</string>
    <string name="action_action">Action</string>
    <string name="action_readall">Mark all as Read</string>
    <string name="action_reload">Reload</string>
    <string name="message_marked">Action completed successfully</string>
    <string name="title_activity_anuncios_view" translatable="false">Visor de Anuncios</string>
    <string name="action_markRead">Mark as read</string>
    <string name="action_markUnread">Mark as unread</string>
    <string name="title_activity_profesores" translatable="false">Profesores</string>
    <string name="action_year">Year filter</string>
    <string name="action_subject">Subject filter</string>
    <string name="filter_all_subjects">Show all Subjects</string>
    <string name="year">Select a year</string>
    <string name="subject">Select a subject</string>
    <string name="send_tutoria">Mentorship</string>
    <string name="send_email">Send Email</string>
    <string name="title_activity_materiales" translatable="false">Materiales</string>
    <string name="title_fragment_files_all">All</string>
    <string name="title_fragment_files_recent">Recent</string>
    <string name="title_folder_home">Home</string>
    <string name="title_folder_unseen">Unseen files</string>
    <string name="materiales_by">By</string>
    <string name="materiales_published_by">Published by:</string>
    <string name="materiales_type_file">File PDF</string>
    <string name="materiales_loading_file">Getting file…</string>
    <string name="materiales_saved_at">File downloaded and saved at Downloads/ConnectU/</string>
    <string name="materiales_sharing_you">Shared from ConnectU</string>
    <string name="materiales_share_button">Shared File</string>
    <string name="materiales_loading">Getting file…</string>
    <string name="error_materiales_loading_dir">Loading folder, please wait a moment</string>
    <string name="title_activity_tutorias" translatable="false">Tutorias</string>
    <string name="title_fragment_tutorias_recent">Pending</string>
    <string name="title_fragment_tutorias_all">All</string>
    <string name="tutoria_without_answer">Without answer</string>
    <string name="tutoria_not_found">Tutorias not found for this selection</string>
    <string name="tutoria_type">Type message</string>
    <string name="tutoria_insert_topic">Insert topic</string>
    <string name="tutoria_create">Create</string>
    <string name="tutoria_cancel">Cancel</string>
    <string name="title_activity_null" translatable="false"></string>
    <string name="error_tutoria_n_found">We are not able to locate this teacher</string>
    <string name="title_activity_evaluacion" translatable="false">Evaluacion</string>
    <string name="title_activity_evaluacion_notas" translatable="false">Notas Eval.</string>
    <string name="notas_see_more">See More</string>
    <string name="action_filter">Type Filter</string>
    <string name="evaluacion_filer_by">Filter by</string>
    <string name="evaluacion_filer_type">Type</string>
    <string name="evaluacion_filer_subject">Subject</string>
    <string name="evaluacion_filer_year">Year</string>
    <string name="evaluacion_published_in">Published in</string>
    <string name="evaluacion_from">From</string>
    <string name="evaluacion_to">to</string>
    <string name="evaluacion_no_description">No description</string>
    <string name="evaluacion_card_not_open">Still not opened</string>
    <string name="evaluacion_card_open_not_sended">Opened but not delivered</string>
    <string name="evaluacion_card_open_sended">Opened and delivered</string>
    <string name="evaluacion_card_not_open_sended">Already closed</string>
    <string name="evaluacion_card_not_need_send">Don\'t need to deliver anything</string>
    <string-array name="type_filters" translatable="false">
        <item>Todos</item>
        <item>Anteriores</item>
        <item>Próximos</item>
    </string-array>
    <string name="evaluacion_loading">Loading data…</string>
    <string name="title_activity_horario" translatable="false">Horario</string>
    <string name="dialog_horario_docencia" translatable="false">Docencia</string>
    <string name="dialog_horario_evaluacion" translatable="false">Evaluacion</string>
    <string name="dialog_horario_examen" translatable="false">Examen</string>
    <string name="dialog_horario_festivo" translatable="false">Festivo</string>
    <string name="view_horario_lotofplaces">Consult oficial website to see more</string>
    <string name="view_horario_allday">this event will last all the day</string>
    <string name="view_horario_holiday">Free Holiday</string>
    <string name="view_horario_in">start in</string>
    <string name="view_horario_loc">At</string>
    <string name="view_horario_last">Duration:</string>
    <string name="view_horario_ended">ended</string>
    <string name="view_horario_days">days</string>
    <string name="view_horario_hours">hours</string>
    <string name="view_horario_minutes">minutes</string>
    <string name="view_horario_started">end in</string>
    <string name="horario_docente">Include Teaching</string>
    <string name="horario_evaluativo">Include Evaluations</string>
    <string name="horario_ex_menes">Include Tests</string>
    <string name="pdata">Personal Information</string>
    <string name="logout">Sign out</string>
    <string name="logout_long">Click here if you wish to logout from the app</string>
    <string name="gdata">General settings</string>
    <string name="notifications">Notifications</string>
    <string name="shortcut">Install a Horario Shortcut</string>
    <string name="custom">UI Settings</string>
    <string name="theme">App theme</string>
    <string name="theme_long">Customize app theme</string>
    <string name="mdata">More</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="ndata">Notifications Settings</string>
    <string name="enablenot">Enable notifications</string>
    <string name="enablenot_long">Activate to enable the app to inform when a new notification arrives</string>
    <string name="delaynot">Delay time</string>
    <string name="delaynot_long">Set a delay for the app to find new notifications (Bigger time save more internet)</string>
    <string name="displaysilnot">Display with sound</string>
    <string name="displaysilnot_long">Make sound and activate led light if available</string>
    <string name="title_activity_about">About</string>
    <string name="activity_about_long">Know more about us and the project</string>
    <string name="activity_profesores_image_trans" translatable="false">activity_prof_image_transition</string>
    <string name="activity_profesores_text_trans" translatable="false">activity_prof_text_transition</string>
    <string name="activity_profesores_mixed_trans" translatable="false">activity_prof_mixed_transition</string>
</resources>