<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pdata"
        android:key="personal_category">

        <com.onelio.connectu.CustomViews.ProfilePreference
            android:key="preference_profile"
            android:layout="@layout/view_profile_preference" />

        <Preference
            android:key="preference_logout"
            android:title="@string/logout"
            android:summary="@string/logout_long"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/gdata"
        android:key="sync_category">

        <Preference
            android:key="preference_notification"
            android:title="@string/notifications" />

        <Preference
            android:key="preference_shortcut"
            android:title="@string/shortcut" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/custom"
        android:key="custom_category">

        <Preference
            android:key="preference_theme"
            android:title="@string/theme"
            android:summary="@string/theme_long"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/mdata"
        android:key="more_category">

        <Preference
            android:key="preference_about"
            android:title="@string/title_activity_about"
            android:summary="@string/activity_about_long">
        </Preference>

        <Preference android:title="Play Store"
            android:summary="Vote Us">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://play.google.com/store/apps/details?id=com.onelio.connectu" />
        </Preference>

        <Preference android:title="Github"
            android:summary="Visit project public Repository">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://github.com/Onelio/ConnectU" />
        </Preference>



    </PreferenceCategory>

</PreferenceScreen>