<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/title_activity_notifications"
        android:key="notifications_category">

        <SwitchPreferenceCompat android:key="enableNotifications"
            android:title="@string/enablenot"
            android:summary="@string/enablenot_long" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/ndata"
        android:key="notifications_more_category">

        <ListPreference android:key="delayNotifications"
            android:title="@string/delaynot"
            android:summary="@string/delaynot_long"
            android:entries="@array/Time"
            android:entryValues="@array/TimeData"
            android:enabled="true"/>

        <CheckBoxPreference android:key="displaySilNotification"
            android:title="@string/displaysilnot"
            android:summary="@string/displaysilnot_long"
            android:enabled="true"/>

    </PreferenceCategory>

</PreferenceScreen>