<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.onelio.connectu.Activities.Apps.Profesores.ProfesoresViewActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                android:id="@+id/imgb"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/map_bg"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.3"
                android:background="#000000"/>

            <ImageView
                android:onClick="onBackClick"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="22dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                app:srcCompat="@drawable/ic_back_white_24dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_margin="16dp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:transitionName="@string/activity_profesores_image_trans"
                    android:id="@+id/pictureD"
                    app:srcCompat="@mipmap/ic_launcher"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ffffff"
                        android:textSize="18dp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:id="@+id/name"
                        android:transitionName="@string/activity_profesores_text_trans"
                        android:text="Profesor manolo blablabla"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ffffff"
                        android:textSize="14dp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:id="@+id/signature"
                        android:transitionName="@string/activity_profesores_mixed_trans"
                        android:text="Matematicas"/>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1" />

        <android.support.v7.widget.CardView
            android:layout_marginBottom="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="12dp"
            android:layout_weight="0.25">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:paddingTop="22dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="Physical mentorship"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/view_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:fontFamily="serif"
                        android:paddingTop="6dp"
                        android:text="BLABLABLABLA" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="Virtual mentorship"
                        android:paddingTop="32dp"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/cardMap"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="22dp"
                        android:gravity="center">

                        <LinearLayout
                            android:id="@+id/action_email"
                            android:onClick="onEmailClick"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="?android:attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="48dp"
                                android:layout_height="48dp"
                                app:srcCompat="@drawable/ic_email_accent_24dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/email"
                                android:textColor="@color/colorAccent"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/action_mentorship"
                            android:onClick="onTutoriaClick"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="?android:attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="48dp"
                                android:layout_height="48dp"
                                app:srcCompat="@drawable/ic_chat_accent_24dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/send_tutoria"
                                android:textColor="@color/colorAccent"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</RelativeLayout>
